<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnBackground"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appearance"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/btnTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textCurrentTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_theme"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
